--- a/_columns/Swing_Trading/zh-cn/2024-10-04.md
+++ b/_columns/Swing_Trading/zh-cn/2024-10-04.md
@@ -12,11 +12,11 @@ author: JUSTIN NIELSEN
 
 
 If a friend treated you poorly enough times, you might feel like ending the relationship. Or at least limit the time you spend together. But as much as we ascribe human characteristics to our stocks, they are not people. Which is why Spotify got multiple chances this year even though it didn't work out a number of times.  
-如果朋友对你不好的次数足够多，你可能会想结束这段关系。或者至少限制你们在一起的时间。但是，尽管我们将人类特征归因于我们的股票，但它们不是人。这就是为什么 Spotify 今年获得了多次机会，尽管它没有成功过几次。
+如果朋友对你不好的次数足够多，你可能会想结束这段关系。或者至少限制你们在一起的时间。但是，尽管我们将人类特征归因于我们的种群，但它们不是人。这就是为什么 Spotify 今年获得了多次机会，尽管它多次都没有成功。
 
 
 **Spotify Technology** ([SPOT](https://research.investors.com/quote.aspx?symbol=SPOT)) gave us a 10%-plus trade earlier this year as [its moving average lines converged](https://www.investors.com/research/swing-trading/spotify-stock-moving-averages-converge/). We tried it seven more times since then with many of the results leading to small gains or small losses. But it's often worth it to keep trying if a stock doesn't break down and the setups are still there.  
-**Spotify Technology** （[SPOT）](https://research.investors.com/quote.aspx?symbol=SPOT) 今年早些时候为我们提供了 10% 以上的交易，因为[其移动平均线收敛](https://www.investors.com/research/swing-trading/spotify-stock-moving-averages-converge/)。从那时起，我们又尝试了七次，许多结果导致小额收益或小额亏损。但是，如果一只股票没有崩溃并且设置仍然存在，那么继续尝试通常是值得的。
+**Spotify Technology** （[SPOT）](https://research.investors.com/quote.aspx?symbol=SPOT) 今年早些时候给了我们 10% 以上的交易，因为[其移动平均线收敛](https://www.investors.com/research/swing-trading/spotify-stock-moving-averages-converge/)了。从那时起，我们又尝试了七次，许多结果导致小额收益或小额损失。但是，如果一只股票没有坏掉并且设置仍然存在，那么继续尝试通常是值得的。
 
 
 
