--- a/_columns/Stock_Of_the_Day/zh-cn/2024-11-04.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-11-04.md
@@ -17,17 +17,17 @@ JPMorgan Chase is the [IBD Stock Of The Day](https://www.investors.com/research/
 
 
 **JPMorgan Chase** ([JPM](https://research.investors.com/quote.aspx?symbol=JPM)) on Oct. 11 reported Q3 earnings of $4.37 per share, handily beating FactSet expectations for $3.99 per share. Reported net revenue rose roughly 7% to $42.7 billion, which cleared estimates for $41.4 billion.  
-**摩根大通** （[JPM](https://research.investors.com/quote.aspx?symbol=JPM)） 于 10 月 11 日公布第三季度每股收益 4.37 美元，轻松超过了 FactSet 预期的每股 3.99 美元。报告的净收入增长约 7% 至 427 亿美元，高于 414 亿美元的预期。
+**摩根大通** （[JPM](https://research.investors.com/quote.aspx?symbol=JPM)） 于 10 月 11 日报告第三季度每股收益 4.37 美元，轻松超过了 FactSet 预期的每股 3.99 美元。报告的净收入增长约 7% 至 427 亿美元，高于 414 亿美元的预期。
 
 
 
 
 JPMorgan saw assets under management increase by 23% to $3.9 trillion. Net interest income rose 3% to $23.5 billion. Average deposits were down 8% from last year, while average loans rose 1% from 2023.  
-摩根大通的管理资产增长了 23%，达到 3.9 万亿美元。净利息收入增长 3% 至 235 亿美元。平均存款比去年下降 8%，而平均贷款比 2023 年增长 1%。
+摩根大通的管理资产增长了 23%，达到 3.9 万亿美元。净利息收入增长 3% 至 235 亿美元。平均存款比去年下降了 8%，而平均贷款比 2023 年增长了 1%。
 
 
 Investment banking revenue increased 29%, driven by a 31% jump in investment banking fees. Banking and wealth management revenue fell 11% due to lower interest income on deposits and lower deposit balances. However, home lending revenue rose 3%, while card services and auto revenue increased 11%.  
-投资银行业务收入增长 29%，这得益于投资银行业务费用增长 31%。银行和财富管理业务收入下降 11%，原因是存款利息收入减少和存款余额减少。然而，住房贷款收入增长 3%，而卡服务和汽车收入增长 11%。
+投资银行业务收入增长了 29%，这得益于投资银行业务费用增长了 31%。由于存款利息收入减少和存款余额减少，银行和财富管理收入下降 11%。然而，住房贷款收入增长了 3%，而卡服务和汽车收入增长了 11%。
 
 
 JPMorgan increased its provision for credit losses to $3.1 billion, from $1.38 billion for the same quarter last year.  
@@ -35,7 +35,7 @@ JPMorgan increased its provision for credit losses to $3.1 billion, from $1.38 b
 
 
 The bank guided 2024 net interest income around $92.5 billion, with an implied $22.9 billion in net interest income for Q4. FactSet analysts expect $92.2 billion in NII for the year, revised up from the previous outlook for $91 billion ahead of earnings. Analysts predict JPMorgan will generate $22.83 billion in net interest income for the fourth quarter.  
-该银行指导 2024 年净利息收入约为 925 亿美元，隐含第四季度净利息收入为 229 亿美元。FactSet 分析师预计今年的净利息收入为 922 亿美元，比之前预期的 910 亿美元上调。分析师预测，摩根大通第四季度将产生 228.3 亿美元的净利息收入。
+该银行 2024 年的净利息收入指导约为 925 亿美元，第四季度的隐含净利息收入为 229 亿美元。FactSet 分析师预计今年的 NII 为 922 亿美元，比之前预期的 910 亿美元上调。分析师预测，摩根大通第四季度将产生 228.3 亿美元的净利息收入。
 
 
 Analyst Outlooks 分析师展望
@@ -47,7 +47,7 @@ A number of firms lifted their price target after earnings, with RBC Capital not
 
 
 JPMorgan's diversified business model and billions in investments over the past decade have resulted in a fortress balance sheet and highly profitable banking model, RBC Capital wrote. RBC raised its price target on JPM stock to 230 from 211 and kept an outperform rating on the shares.  
-RBC Capital 写道，摩根大通的多元化商业模式和过去十年数十亿美元的投资造就了坚固的资产负债表和高利润的银行模式。RBC 将摩根大通股票的目标价从 211 上调至 230，并维持对该股的跑赢大盘评级。
+RBC Capital 写道，摩根大通的多元化商业模式和过去十年数十亿美元的投资造就了堡垒资产负债表和高利润的银行模式。RBC 将摩根大通股票的目标价从 211 上调至 230，并维持对该股的跑赢大盘评级。
 
 
 Meanwhile, Kenneth Leon, director of equity research at CFRA Research, forecasts that a strong economy will provide room for further growth, even if interest rates fall.  
@@ -55,7 +55,7 @@ Meanwhile, Kenneth Leon, director of equity research at CFRA Research, forecasts
 
 
 "We believe a healthy U.S. economy will drive loan volume growth that will partly offset rate declines. Also, non-NII revenue from the Asset and Wealth Management and Corporate and Investment Banking units should benefit from lower rates," Leon wrote in a post-earnings note.  
-“我们相信健康的美国经济将推动贷款量增长，这将部分抵消利率下降。此外，资产和财富管理部门以及企业和投资银行部门的非 NII 收入应该会受益于较低的利率，”Leon 在财报后的报告中写道。
+“我们相信健康的美国经济将推动贷款量增长，这将部分抵消利率下降。此外，来自资产和财富管理以及企业和投资银行部门的非 NII 收入应该会受益于较低的利率，“Leon 在财报后的报告中写道。
 
 
 CFRA Research maintained a buy rating on JPM stock with a 12-month price target of 230.  
