--- a/_columns/Stock_Of_the_Day/2024-11-06.md
+++ b/_columns/Stock_Of_the_Day/2024-11-06.md
@@ -15,7 +15,7 @@ author: KIT NORTON
 **Fair Isaac** ([FICO](https://research.investors.com/quote.aspx?symbol=FICO)) is Wednesday's [IBD Stock Of The Day](https://www.investors.com/category/research/ibd-stock-of-the-day/) as the credit-scoring services firm and S&P 500 component broke out above a buy point ahead of reporting fiscal fourth-quarter earnings and revenue after the market closed Wednesday.
 
 
-Montana-based Fair Isaac is a data analytics company, best known for its FICO score — a measure of consumer credit risk used by consumer lenders in the U.S. The company's two operating segments are "scores" and "software."
+Montana-based Fair Isaac is an analytics software company, best known for its FICO score — a measure of consumer credit risk used by consumer lenders in the U.S. The company's two operating segments are "scores" and "software."
 
 
 
