--- a/_columns/Swing_Trading/zh-cn/2024-11-01.md
+++ b/_columns/Swing_Trading/zh-cn/2024-11-01.md
@@ -76,20 +76,22 @@ Sitting Out While A Stock Consolidates在股票整合时袖手旁观
 
 
 Pullbacks are great for entries but not as much fun to sit in. Our exit allowed us to watch Clear Secure pull back below the 10-day line without taking the hit to the portfolio **(7)**. Most likely holding it longer would have just created an exit at a worse price and a bigger drawdown. With YOU stock running into resistance at its old high **(8)**, we can watch this one from the sidelines until we see another opportunity.  
-回调非常适合入场，但坐着没有那么有趣。我们的退出使我们能够看到 Clear Secure 回调至 10 天线以下，而不会对投资组合造成打击 **（7）。**持有更长时间很可能只会以更差的价格和更大的回撤退出。随着 YOU 股票在旧高点 **（8）** 遇到阻力，我们可以在场边观察这只股票，直到我们看到另一个机会。
+回调非常适合入场，但坐着没有那么有趣。我们的退出使我们能够看到 Clear Secure 回调至 10 天线以下，而不会对投资组合造成打击 **（7）。**很可能持有更长时间只会以更糟糕的价格和更大的回撤退出。随着 YOU 股票在旧高点 **（8）** 遇到阻力，我们可以在场边观察这只股票，直到我们看到另一个机会。
 
 
 That's especially attractive to be on the bench as [earnings](https://www.investors.com/research/earnings-calendar-analyst-estimates-stocks-to-watch/) and the election are around the corner in less than a week. Two events that could add extra volatility to stock positions.  
 坐在替补席上特别有吸引力，因为在不到一周的时间里，[财报](https://www.investors.com/research/earnings-calendar-analyst-estimates-stocks-to-watch/)和选举就要来了。这两个事件可能会增加股票头寸的额外波动性。
 
 
-*More details on past trades are accessible to subscribers and trialists to SwingTrader. [Free trials](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) are available. Follow Nielsen on X, formerly known as Twitter, at [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen).* 
+*More details on past trades are accessible to subscribers and trialists to SwingTrader. [Free trials](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) are available. Follow Nielsen on X, formerly known as Twitter, at [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen).  
+SwingTrader 的订阅者和试用者可以访问有关过去交易的更多详细信息。提供[免费试用](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH)。在 X 上关注尼尔森，前身为 Twitter，网址为 [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen)。*
 
 
-**YOU MAY ALSO LIKE:** 
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
 
 
-[Want To Know Our Swing Trading Strategies? Watch This Weekly Update.](https://www.investors.com/ibd-videos/category/swing-trader-status-update?archive=1) 
+[Want To Know Our Swing Trading Strategies? Watch This Weekly Update.  
+想知道我们的波段交易策略吗？观看此每周更新。](https://www.investors.com/ibd-videos/category/swing-trader-status-update?archive=1)
 
 
 [Mark Minervini Has This Counter-Intuitive Advice For Volatile Markets  
