--- a/_columns/The_Big_Picture/zh-cn/2024-11-05.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-05.md
@@ -70,7 +70,7 @@ AI-related stocks generally performed well after Astera Labs reported [Q3 revenu
 
 
 Palantir, another big player in the AI space as a provider of data analytics software, soared more than 23%. The stock market leader reported its fourth straight quarter of [accelerating revenue growth](https://www.investors.com/news/technology/palantir-stock-palantir-earnings-news-q32024/). But it's way past a proper entry after shares surged 21% in August, also on strong earnings.  
-Palantir 是 AI 领域的另一家大公司，是数据分析软件提供商，股价飙升超过 23%。这家股市领导者报告了其连续第四个季度[加速收入增长](https://www.investors.com/news/technology/palantir-stock-palantir-earnings-news-q32024/)。但在 8 月份股价飙升 21% 之后，它也远未通过一个合适的入场点，这也是由于强劲的收益。
+Palantir 是 AI 领域的另一家大公司，是数据分析软件提供商，股价飙升超过 23%。这家股市领导者报告了其连续第四个季度[加速收入增长](https://www.investors.com/news/technology/palantir-stock-palantir-earnings-news-q32024/)。但在 8 月份股价飙升 21% 之后，它也远未进入一个合适的市场，这也是由于强劲的收益。
 
 
 **Arista Networks** ([ANET](https://research.investors.com/quote.aspx?symbol=ANET)), yet another AI stock, is trading tightly just above its 10-week moving average with earnings due Thursday after the close.  
