--- a/_columns/The_Big_Picture/zh-cn/2024-11-06.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-06.md
@@ -84,10 +84,12 @@ Perhaps more importantly for investors, the nation avoided a contested election,
 也许对投资者来说更重要的是，美国避免了一场有争议的选举，消除了笼罩在华尔街上的最大乌云之一。作为对冲政治动荡的黄金资产普遍下跌。11 月交割的黄金价格下跌 2.7% 至每盎司 2,667.60 美元。芝加哥[期权交易所市场波动率指数](https://research.investors.com/psychological-market-indicators/chart?type=volatility)（通常被称为股市的恐惧指标）下跌 20.6%，创下 8 月 6 日以来的最大跌幅。
 
 
-Of course, the so-called Trump Trade came out a big winner. **Trump Media & Technology** ([DJT](https://research.investors.com/quote.aspx?symbol=DJT)) [social media company's stock](https://www.investors.com/news/donald-trump-stock-djt-presidential-election/) closed nearly 6% higher after trimming earlier gains.  
+Of course, the so-called Trump Trade came out a big winner. **Trump Media & Technology** ([DJT](https://research.investors.com/quote.aspx?symbol=DJT)) [social media company's stock](https://www.investors.com/news/donald-trump-stock-djt-presidential-election/) closed nearly 6% higher after trimming earlier gains.  
+当然，所谓的特朗普交易（Trump Trade）成为了大赢家。**特朗普媒体与科技**（[DJT](https://research.investors.com/quote.aspx?symbol=DJT)）[社交媒体公司的股票](https://www.investors.com/news/donald-trump-stock-djt-presidential-election/)在削减了早些时候的涨幅后，收盘上涨了近6%。
 
 
-With Trump favoring cryptocurrencies, [bitcoin prices climbed to a record high](https://www.investors.com/news/bitcoin-price-outlook-2024-us-election-trump-kamala-harris-nov-6/) late Wednesday.  
+With Trump favoring cryptocurrencies, [bitcoin prices climbed to a record high](https://www.investors.com/news/bitcoin-price-outlook-2024-us-election-trump-kamala-harris-nov-6/) late Wednesday.  
+由于特朗普偏爱加密货币，[比特币价格周三晚些时候攀升至历史新高](https://www.investors.com/news/bitcoin-price-outlook-2024-us-election-trump-kamala-harris-nov-6/)。
 
 
 **Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) gapped up nearly 15% in double its usual volume. It regained a 264.86 buy point and topped an alternative entry at 273.54. While Trump and Congress may scale back electric-vehicle goals, CEO Elon Musk may have a role in the next administration. Some shareholders, though, worry it may become a distraction for Musk.  
