--- a/_columns/Stock_Of_the_Day/zh-cn/2024-11-06.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-11-06.md
@@ -16,8 +16,8 @@ author: KIT NORTON
 **Fair Isaac** （[FICO）](https://research.investors.com/quote.aspx?symbol=FICO) 是周三的 [IBD 每日股票](https://www.investors.com/category/research/ibd-stock-of-the-day/)，因为这家信用评分服务公司和标准普尔 500 指数成分股在周三收盘后公布第四财季收益和收入之前突破了买入点。
 
 
-Montana-based Fair Isaac is a data analytics company, best known for its FICO score — a measure of consumer credit risk used by consumer lenders in the U.S. The company's two operating segments are "scores" and "software."  
-总部位于蒙大拿州的 Fair Isaac 是一家数据分析公司，以其 FICO 评分而闻名，FICO 评分是美国消费贷款机构用来衡量消费者信用风险的指标。该公司的两个运营部门是“分数”和“软件”。
+Montana-based Fair Isaac is an analytics software company, best known for its FICO score — a measure of consumer credit risk used by consumer lenders in the U.S. The company's two operating segments are "scores" and "software."  
+总部位于蒙大拿州的 Fair Isaac 是一家分析软件公司，以其 FICO 评分而闻名，FICO 评分是美国消费者贷款机构使用的消费者信用风险衡量标准。该公司的两个运营部门是“分数”和“软件”。
 
 
 
