--- a/_columns/The_Big_Picture/zh-cn/2024-11-06.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-06.md
@@ -60,36 +60,29 @@ Financials, industrials and energy — sectors that may see less in terms of gov
 金融、工业和能源等受政府监管影响较小的板块以 3.8% 至 6.1% 的涨幅领涨股市。
 
 
-Consumer Discretionary Select Sector SPDR ([XLY](https://research.investors.com/quote.aspx?symbol=XLY)) climbed more than 3%. But the defensive consumer staples, real estate and utilities fell Wednesday. Utilities also compared unfavorably to rising Treasury yields.  
-非必需消费品精选板块 SPDR （[XLY](https://research.investors.com/quote.aspx?symbol=XLY)） 上涨超过 3%。但防御性必需消费品、房地产和公用事业周三下跌。与不断上升的美国国债收益率相比，公用事业也表现不佳。
+Consumer Discretionary Select Sector SPDR ([XLY](https://research.investors.com/quote.aspx?symbol=XLY)) climbed more than 3%. But the defensive consumer staples, real estate and utilities fell Wednesday. Utilities also compared unfavorably to rising Treasury yields.  
 
 
-Stock Market Winners & Losers股市赢家和输家
-------------------------------------
+Stock Market Winners & Losers
+-----------------------------
 
 
-Although control of the House of Representatives remained unclear late Wednesday, Trump's decisive victory and GOP control of the Senate means a win for many businesses and [multiple potential changes in policy](https://www.investors.com/market-trend/stock-market-today/dow-jones-surges-trump-win-signals-bull-run/).  
-尽管周三晚些时候对众议院的控制权仍不明朗，但特朗普的决定性胜利和共和党对参议院的控制意味着许多企业的胜利和[政策的多种潜在变化](https://www.investors.com/market-trend/stock-market-today/dow-jones-surges-trump-win-signals-bull-run/)。
+Although control of the House of Representatives remained unclear late Wednesday, Trump's decisive victory and GOP control of the Senate means a win for many businesses and [multiple potential changes in policy](https://www.investors.com/market-trend/stock-market-today/dow-jones-surges-trump-win-signals-bull-run/).  
 
 
-"Trump is viewed as supporting lower corporate tax rates, deregulation, and industrial policies that favor domestic growth, all of which could provide more stimulus to the U.S. economy and benefit risk assets," Janus Henderson strategists Marc Pinto and Lucas Klein said in a report. "These policies could also lead to a stronger dollar, which would be a boon for U.S. small-cap firms with a domestic focus."  
-“特朗普被视为支持降低公司税率、放松管制和有利于国内增长的产业政策，所有这些都可能为美国经济提供更多刺激，并使风险资产受益，”骏利亨德森策略师 Marc Pinto 和 Lucas Klein 在一份报告中表示。“这些政策还可能导致美元走强，这对专注于国内的美国小盘股公司来说将是一个福音。”
+"Trump is viewed as supporting lower corporate tax rates, deregulation, and industrial policies that favor domestic growth, all of which could provide more stimulus to the U.S. economy and benefit risk assets," Janus Henderson strategists Marc Pinto and Lucas Klein said in a report. "These policies could also lead to a stronger dollar, which would be a boon for U.S. small-cap firms with a domestic focus."  
 
 
-In the 2016 election, the S&P 500 gained nearly 5% from the day before the presidential election through the end of the year in the first Trump rally, Pinto and Klein wrote. "We expect a similar trend could play out this time around, too."  
-平托和克莱因写道，在 2016 年大选中，标准普尔 500 指数从总统大选前一天到年底在特朗普的第一次反弹中上涨了近 5%。“我们预计这一次也会出现类似的趋势。”
+In the 2016 election, the S&P 500 gained nearly 5% from the day before the presidential election through the end of the year in the first Trump rally, Pinto and Klein wrote. "We expect a similar trend could play out this time around, too."  
 
 
-Perhaps more importantly for investors, the nation avoided a contested election, removing one of the biggest clouds hanging over Wall Street. Gold assets, which acted as a hedge against political turmoil, fell broadly. Gold for November delivery fell 2.7% to $2,667.60 per ounce. The [Cboe Market Volatility Index](https://research.investors.com/psychological-market-indicators/chart?type=volatility), often called the stock market's fear gauge, slid 20.6% in its biggest drop since Aug. 6.  
-也许对投资者来说更重要的是，美国避免了一场有争议的选举，消除了笼罩在华尔街上的最大乌云之一。作为对冲政治动荡的黄金资产普遍下跌。11 月交割的黄金价格下跌 2.7% 至每盎司 2,667.60 美元。芝加哥[期权交易所市场波动率指数](https://research.investors.com/psychological-market-indicators/chart?type=volatility)（通常被称为股市的恐惧指标）下跌 20.6%，创下 8 月 6 日以来的最大跌幅。
+Perhaps more importantly for investors, the nation avoided a contested election, removing one of the biggest clouds hanging over Wall Street. Gold assets, which acted as a hedge against political turmoil, fell broadly. Gold for November delivery fell 2.7% to $2,667.60 per ounce. The [Cboe Market Volatility Index](https://research.investors.com/psychological-market-indicators/chart?type=volatility), often called the stock market's fear gauge, slid 20.6% in its biggest drop since Aug. 6.  
 
 
-Of course, the so-called Trump Trade came out a big winner. **Trump Media & Technology** ([DJT](https://research.investors.com/quote.aspx?symbol=DJT)) [social media company's stock](https://www.investors.com/news/donald-trump-stock-djt-presidential-election/) closed nearly 6% higher after trimming earlier gains.  
-当然，所谓的特朗普交易（Trump Trade）成为了大赢家。**特朗普媒体与科技**（[DJT](https://research.investors.com/quote.aspx?symbol=DJT)）[社交媒体公司的股票](https://www.investors.com/news/donald-trump-stock-djt-presidential-election/)在削减了早些时候的涨幅后，收盘上涨了近6%。
+Of course, the so-called Trump Trade came out a big winner. **Trump Media & Technology** ([DJT](https://research.investors.com/quote.aspx?symbol=DJT)) [social media company's stock](https://www.investors.com/news/donald-trump-stock-djt-presidential-election/) closed nearly 6% higher after trimming earlier gains.  
 
 
-With Trump favoring cryptocurrencies, [bitcoin prices climbed to a record high](https://www.investors.com/news/bitcoin-price-outlook-2024-us-election-trump-kamala-harris-nov-6/) late Wednesday.  
-由于特朗普偏爱加密货币，[比特币价格周三晚些时候攀升至历史新高](https://www.investors.com/news/bitcoin-price-outlook-2024-us-election-trump-kamala-harris-nov-6/)。
+With Trump favoring cryptocurrencies, [bitcoin prices climbed to a record high](https://www.investors.com/news/bitcoin-price-outlook-2024-us-election-trump-kamala-harris-nov-6/) late Wednesday.  
 
 
 **Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) gapped up nearly 15% in double its usual volume. It regained a 264.86 buy point and topped an alternative entry at 273.54. While Trump and Congress may scale back electric-vehicle goals, CEO Elon Musk may have a role in the next administration. Some shareholders, though, worry it may become a distraction for Musk.  
